--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/News/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/News/Index.cshtml
@@ -1,17 +1,17 @@
-﻿@model IEnumerable<ColoShopEcommerce.WebApp.Models.EF.Category>
+﻿@model IEnumerable<ColoShopEcommerce.WebApp.Models.EF.News>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
-<!-- partial -->
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="card">
             <div class="card-body">
                 @*Custom đường dẫn*@
                 <div>
-                    <a href="/admin/category/add" class="btn btn-primary">Thêm mới</a>
+                    <a href="/admin/news/add" class="btn btn-primary">Thêm mới Tin Tức</a>
                 </div>
 
                 <br />
@@ -21,10 +21,11 @@
                             <table id="order-listing" class="table">
                                 <thead>
                                     <tr>
-                                        <th>ID #</th>
-                                        <th>Title</th>
-                                        <th>Position</th>
-                                        <th>Actions</th>
+                                        <th>STT #</th>
+                                        <th>Hình Ảnh</th>
+                                        <th>Tiêu Đề</th>
+                                        <th>Ngày Tạo</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -36,11 +37,14 @@
                                         {
                                             <tr id="trow_@item.Id">
                                                 <td>@i</td>
+                                                <td>
+                                                    <img src="~/UploadImageNews/@item.Image" width="100" height="100" />
+                                                </td>
                                                 <td>@item.Title</td>
-                                                <td>@item.Position</td>
+                                                <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
                                                 <td>
                                                     <a href="#" class="btn btn-outline-primary">Xem</a>
-                                                    <a href="/admin/category/edit/@item.Id" class="btn btn-outline-primary">Sửa</a>
+                                                    <a href="/admin/news/edit/@item.Id" class="btn btn-outline-primary">Sửa</a>
                                                     <a href="#" data-id="@item.Id" class="btn btn-outline-primary btnDelete" onclick="showSuccessToast()">Xóa</a>
                                                 </td>
                                             </tr>
@@ -67,28 +71,3 @@
     <!-- content-wrapper ends -->
     <!-- partial -->
 </div>
-
-@section scripts{
-    <script>
-        $(document).ready(function () {
-            $('body').on('click', '.btnDelete', function () {
-                var id = $(this).data("id");
-                var msg = confirm('Bạn có muốn xóa bản ghi này không ?');
-                if (msg === true) {
-                    $.ajax({
-                        url: '/admin/category/delete',
-                        type: 'POST',
-                        data: { id: id },
-                        success: function (rs) {
-                            if (rs.success) {
-                                $('#trow_' + id).remove();
-                            }
-                        }
-                    });
-                }
-                return false;
-            });
-        });
-    </script>
-}
-
