--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/News/Edit.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/News/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ColoShopEcommerce.WebApp.Models.EF.News
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
@@ -10,11 +10,14 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Thêm Tin Tức</h4>
-                        @using (Html.BeginForm("Add", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        <h4 class="card-title">Sửa Tin Tức</h4>
+                        @using (Html.BeginForm("Edit", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
                             @Html.ValidationSummary(true)
+                            @Html.HiddenFor(x => x.Id)
+                            @Html.HiddenFor(x => x.CategoryId)
+                            @Html.HiddenFor(x => x.CreatedDate)
                             <div class="form-group">
                                 <label for="exampleInputName1">Tiêu Đề</label>
                                 @Html.TextBoxFor(x => x.Title, new { @class = "form-control", @placeholder = "Tiêu Đề" })
@@ -60,10 +63,10 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleSelectGender">Trạng Thái Hiển Thị</label>
-                                @Html.CheckBoxFor(x => x.IsActive, new {@checked = "@checked"})
+                                @Html.CheckBoxFor(x => x.IsActive, new { @checked = "@checked" })
                                 @Html.ValidationMessageFor(x => x.IsActive, null, new { @class = "text-danger" })
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm Mới</button>
+                            <button type="submit" class="btn btn-primary mr-2">Cập Nhật</button>
                             <a href="/admin/news" class="btn btn-warning">Quay Lại</a>
 
                         }
