--- a/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
@@ -69,11 +69,28 @@
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="mdi mdi-airplay menu-icon"></i>
                             <span class="menu-title">Cài Đặt Hệ Thống</span>
                         </a>
+                    </li>
+
+
+
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+                            <i class="mdi mdi-lock-outline menu-icon"></i>
+                            <span class="menu-title">Quản Lý Tài Khoản</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="auth">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" href="#"> Quản Trị </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#"> Khách Hàng </a></li>
+                            </ul>
+                        </div>
                     </li>
 
                     <li class="nav-item">
@@ -90,36 +107,16 @@
                         </div>
                     </li>
 
-
-                    @*<li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-                            <i class="mdi mdi-table-large menu-icon"></i>
-                            <span class="menu-title">Tables</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                        <div class="collapse" id="tables">
-                            <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/tables/data-table.html">Data table</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/tables/js-grid.html">Js-grid</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/tables/sortable-table.html">Sortable table</a></li>
-                            </ul>
-                        </div>
-                    </li>*@
-
-
-
-
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                            <i class="mdi mdi-lock-outline menu-icon"></i>
-                            <span class="menu-title">Quản Lý Tài Khoản</span>
+                        <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
+                            <i class="mdi mdi-apple-keyboard-command menu-icon"></i>
+                            <span class="menu-title">Quản Lý Sản Phẩm</span>
                             <i class="menu-arrow"></i>
                         </a>
-                        <div class="collapse" id="auth">
+                        <div class="collapse" id="icons">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="#"> Quản Trị </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="#"> Khách Hàng </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","ProductCategories")">Danh Mục Sản Phẩm</a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#">Sản Phẩm</a></li>
                             </ul>
                         </div>
                     </li>
@@ -140,6 +137,7 @@
                             </ul>
                         </div>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#e-commerce" aria-expanded="false" aria-controls="e-commerce">
                             <i class="mdi mdi-cart-outline menu-icon"></i>
@@ -159,7 +157,6 @@
             </nav>
             <!-- partial -->
             @RenderBody()
-
             <!-- main-panel ends -->
         </div>
         <!-- page-body-wrapper ends -->
