--- a/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
@@ -116,7 +116,7 @@
                         <div class="collapse" id="icons">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","ProductCategories")">Danh Mục Sản Phẩm</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="#">Sản Phẩm</a></li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","Products")">Sản Phẩm</a></li>
                             </ul>
                         </div>
                     </li>
