Render Page Product

--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/Products/Add.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/Products/Add.cshtml
@@ -29,7 +29,7 @@
                             <div class="form-group">
                                 <label for="exampleInputName1">Ảnh Sản Phẩm</label>
                                 <div class="col-md-10">
-                                    <input type="file" name="imageProducts" accept=".jpg,.png,.jpeg" />
+                                    <input type="file" name="imageProducts" accept=".jpg,.png,.jpeg" required/>
                                     
                                 </div>
                             </div>
