--- a/ColoShopEcommerce.WebApp/Views/Home/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Client.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/Content/Client/styles/main_styles.css">
+
 
 <!-- Slider -->
 
@@ -54,7 +56,7 @@
 
 <div class="new_arrivals">
     <div class="container">
-        @Html.Action("MenuNewArrival", "Menu")       
+        @Html.Action("MenuNewArrival", "Menu")
     </div>
 </div>
 
