--- a/ColoShopEcommerce.WebApp/Views/Product/_HomeBestSeller.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/_HomeBestSeller.cshtml
@@ -1,4 +1,8 @@
 ﻿@model IEnumerable<ColoShopEcommerce.WebApp.Models.EF.Product>
+@{ 
+    var format = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
+
+}
 @if (Model != null && Model.Any())
 {
     <div class="best_sellers">
@@ -33,14 +37,14 @@
                                             @*<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>Hot</span></div>*@
                                             <div class="favorite favorite_left"></div>
                                             <div class="product_info">
-                                                <h6 class="product_name"><a href="@item.Alias">@item.Title</a></h6>
+                                                <h6 class="product_name"><a href="/chi-tiet/@item.Alias-@item.Id">@item.Title</a></h6>
                                                 @if (item.PriceSale > 0)
                                                 {
-                                                    <div class="product_price">@item.PriceSale Đ<span>@item.Price Đ</span></div>
+                                            <div class="product_price"> @String.Format(format, "{0:c0}", @item.PriceSale)<span>@String.Format(format, "{0:c0}", @item.Price)</span></div>
                                                 }
                                                 else
                                                 {
-                                                    <div class="product_price">@item.Price Đ</div>
+                                            <div class="product_price">@String.Format(format, "{0:c0}", @item.Price)</div>
                                                 }
                                             </div>
                                         </div>
