--- a/ColoShopEcommerce.WebApp/Views/Product/_ProductByCateNewArrival.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/_ProductByCateNewArrival.cshtml
@@ -2,6 +2,7 @@
 
 @if (Model != null && Model.Any())
 {
+    var format = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
     foreach (var item in Model)
     {
         <div class="product-item @item.ProductCategory.Alias">
@@ -12,14 +13,14 @@
                 <div class="favorite favorite_left"></div>
                 <div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>New</span></div>
                 <div class="product_info">
-                    <h6 class="product_name"><a href="@item.Alias">@item.Title</a></h6>
+                    <h6 class="product_name"><a href="/chi-tiet/@item.Alias-@item.Id">@item.Title</a></h6>
                     @if (item.PriceSale > 0)
                     {
-                        <div class="product_price">@item.PriceSale Đ<span>@item.Price Đ</span></div>
+                        <div class="product_price">@String.Format(format, "{0:c0}", @item.PriceSale)<span>@String.Format(format, "{0:c0}", @item.Price)</span></div>
                     }
                     else
                     {
-                        <div class="product_price">@item.Price Đ</div>
+                        <div class="product_price">@String.Format(format, "{0:c0}", @item.Price)</div>
                     }
                 </div>
             </div>
