--- a/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
@@ -71,7 +71,7 @@
                                     <li class="checkout">
                                         <a href="#">
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                                            <span id="checkout_items" class="checkout_items">2</span>
+                                            <span id="checkout_items" class="checkout_items">0</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -140,6 +140,7 @@
     <script src="~/Content/Client/plugins/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
     <script src="~/Content/Client/js/categories_custom.js"></script>
     <script src="~/Content/Client/js/single_custom.js"></script>
+    <script src="~/Scripts/jsShopping.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
