--- a/ColoShopEcommerce.WebApp/Views/Product/ProductDetail.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/ProductDetail.cshtml
@@ -96,7 +96,7 @@
                             <span id="quantity_value">1</span>
                             <span class="plus"><i class="fa fa-plus" aria-hidden="true"></i></span>
                         </div>
-                        <div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
+                        <div class="red_button add_to_cart_button"><a href="#" class="btnAddToCart" data-id="@Model.Id">add to cart</a></div>
                     </div>
                 </div>
             </div>
