--- a/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
@@ -69,7 +69,7 @@
                                     <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                                     <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
                                     <li class="checkout">
-                                        <a href="#">
+                                        <a href="/gio-hang">
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span id="checkout_items" class="checkout_items">0</span>
                                         </a>
