fix cart subtotal after addtocart and create checkout payment page

--- a/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Client/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Client/plugins/OwlCarousel2-2.2.1/animate.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Client/styles/responsive.css">
+    <link href="~/Content/Client/styles/PaymentCheckout.css" rel="stylesheet" type="text/css" />
+
     @RenderSection("css", required: false)
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -100,7 +102,7 @@
                             <ul class="footer_nav">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">FAQs</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
+                                <li><a href="#">Contact</a></li>
                             </ul>
                         </div>
                     </div>
