--- a/ColoShopEcommerce.WebApp/Views/ShoppingCart/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/ShoppingCart/Index.cshtml
@@ -63,9 +63,13 @@
                                     i++;
                                 }
                                 <tr>
+                                    <th colspan="1">
+                                        <a type="submit" href="/thanh-toan" class="btn btn-danger" value="Submit">Thanh Toán</a>
+                                    </th>
                                     <th colspan="6" class="text-right"> Tổng Tiền: </th>
                                     <th class="text-center subtotal">@Common.FormatCurrency(totalPrice, 0) VND</th>
-                                    <td></td>
+                                    
+                                    
                                 </tr>
 
                             }
@@ -75,22 +79,9 @@
                                     <td><a href="/san-pham"> Giỏ hàng chưa có sản phẩm.</a></td>
                                 </tr>
                             }
-
                         </tbody>
-
-
                     </table>
                 </div>
-            </div>
-
-            <!-- Check Out -->
-            <div class="main_content">
-                <div class="row">
-                    <div class="text-right">
-                        <button id="123" type="submit" class="newsletter_submit_btn trans_300" value="Submit">Thanh Toán</button>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
