--- a/ColoShopEcommerce.WebApp/Views/Home/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Home/Index.cshtml
@@ -30,21 +30,21 @@
             <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(/Content/Client/images/banner_1.jpg)">
                     <div class="banner_category">
-                        <a href="categories.html">women's</a>
+                        <a href="#">women's</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(/Content/Client/images/banner_2.jpg)">
                     <div class="banner_category">
-                        <a href="categories.html">accessories's</a>
+                        <a href="#">accessories's</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(/Content/Client/images/banner_3.jpg)">
                     <div class="banner_category">
-                        <a href="categories.html">men's</a>
+                        <a href="#">men's</a>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="col-lg-6 text-right deal_ofthe_week_col">
                 <div class="deal_ofthe_week_content d-flex flex-column align-items-center float-right">
                     <div class="section_title">
-                        <h2>Deal Of The Week</h2>
+                        <h2>Sale Cuối Tuần</h2>
                     </div>
                     <ul class="timer">
                         <li class="d-inline-flex flex-column justify-content-center align-items-center">
