--- a/ColoShopEcommerce.WebApp/Views/Product/ProductCategory.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/ProductCategory.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<ColoShopEcommerce.WebApp.Models.EF.Product>
 @{
+    var format = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
     ViewBag.Title = "ProductCategory";
     Layout = "~/Views/Shared/_Client.cshtml";
 }
@@ -108,11 +109,11 @@
                                                     <h6 class="product_name"><a href="/chi-tiet/@item.Alias-@item.Id">@item.Title</a></h6>
                                                     @if (item.PriceSale > 0)
                                                     {
-                                                        <div class="product_price">@item.PriceSale Đ<span>@item.Price Đ</span></div>
+                                                <div class="product_price">@String.Format(format, "{0:c0}", @item.PriceSale)<span>@String.Format(format, "{0:c0}", @item.Price)</span></div>
                                                     }
                                                     else
                                                     {
-                                                        <div class="product_price">@item.Price Đ</div>
+                                                <div class="product_price">@String.Format(format, "{0:c0}", @item.Price)</div>
                                                     }
                                                 </div>
                                             </div>
