--- a/ColoShopEcommerce.WebApp/Views/Product/ProductDetail.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/ProductDetail.cshtml
@@ -17,9 +17,9 @@
 
                 <div class="breadcrumbs d-flex flex-row align-items-center">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sản Phẩm</a></li>
                         <li><a href="/danh-muc-san-pham/@Model.ProductCategory.Alias-@Model.ProductCategoryID"><i class="fa fa-angle-right" aria-hidden="true"></i>@Model.ProductCategory.Title</a></li>
-                        <li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Single Product</a></li>
+                        <li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Chi Tiết Sản Phẩm</a></li>
                     </ul>
                 </div>
 
