--- a/ColoShopEcommerce.WebApp/Views/Product/_ProductByCateNewArrival.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Product/_ProductByCateNewArrival.cshtml
@@ -11,7 +11,7 @@
                     <img src="~/UploadImageProducts/@item.Image" alt="">
                 </div>
                 <div class="favorite favorite_left"></div>
-                <div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>New</span></div>
+                <div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>Mới</span></div>
                 <div class="product_info">
                     <h6 class="product_name"><a href="/chi-tiet/@item.Alias-@item.Id">@item.Title</a></h6>
                     @if (item.PriceSale > 0)
